<resources>
    <string name="app_name" translatable="false">rgs</string>
    <string name="settings" translatable="false">settigs</string>

    <string name="txtinfo">Introduzca su email </string>
    <string name="et_email">Email de Lector </string>
    <string name="txtLanguaje">Seleccione idioma tarjeta</string>

    <string name="rb_sp">Español</string>
    <string name="rb_en">Inglés</string>
    <string name="rb_fr">Francés</string>

    <string name="btn_save">Guardar</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_next">Siguiente</string>

    <string name="txt_rango">Rango tarjetas ( inicio / fin )</string>
    <string name="et_inicio">Inicio</string>
    <string name="et_fin">Fin</string>




</resources>