<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="320dp"
        android:layout_height="154dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLanguaje">

        <RadioButton
            android:id="@+id/rb_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_sp"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_en"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_fr"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginBottom="76dp"
        android:onClick="Save"
        android:text="@string/btn_save"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="324dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/txtinfo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLanguaje"
        android:layout_width="324dp"
        android:layout_height="29dp"
        android:layout_marginTop="40dp"
        android:text="@string/txtLanguaje"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="322dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/et_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInfo" />
</androidx.constraintlayout.widget.ConstraintLayout>